--- a/ToDo/TaskViewController.xib
+++ b/ToDo/TaskViewController.xib
@@ -52,6 +52,14 @@
                         <outlet property="delegate" destination="-1" id="mFp-Vp-cYi"/>
                     </connections>
                 </textView>
+                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="r2W-EX-34q">
+                    <frame key="frameInset" minX="37" minY="397" width="46" height="30"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <state key="normal" title="Button"/>
+                    <connections>
+                        <action selector="imagesButton:" destination="-1" eventType="touchUpInside" id="9ed-ok-pHp"/>
+                    </connections>
+                </button>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <point key="canvasLocation" x="34.5" y="144.5"/>
