--- a/ToDo/TaskImageCollectionViewCell.xib
+++ b/ToDo/TaskImageCollectionViewCell.xib
@@ -6,7 +6,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TaskImageViewControllerCell"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TaskImageCollectionViewCell" customModule="ToDo" customModuleProvider="target"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="TaskImageCollectionViewCell" customModule="ToDo" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="162" height="42"/>
@@ -15,9 +15,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="162" height="42"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6T0-ST-1ka">
-                        <frame key="frameInset" minX="-60" minY="-43" width="240" height="128"/>
-                    </imageView>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="6T0-ST-1ka"/>
                 </subviews>
             </view>
             <constraints>
@@ -27,7 +25,10 @@
                 <constraint firstItem="6T0-ST-1ka" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="y8h-LQ-RnV"/>
             </constraints>
             <size key="customSize" width="162" height="42"/>
-            <point key="canvasLocation" x="176" y="60"/>
+            <connections>
+                <outlet property="imageView" destination="6T0-ST-1ka" id="4gS-FD-ytn"/>
+            </connections>
+            <point key="canvasLocation" x="116" y="37"/>
         </collectionViewCell>
     </objects>
 </document>
